Put dumb example up for testing.

--- a/index.html
+++ b/index.html
@@ -1,32 +1,26 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="public/normalize.css">
-    <link rel="stylesheet" type="text/css" href="public/gh_page.css">
-
-    <script src="public/jquery.js"></script>
-    <script src="public/ghostwriter.js"></script>
-    <script src="public/gh_page.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://raw.github.com/jharding/ghostwriter/master/ghostwriter.js"></script>
   </head>
   <body>
-    <div class="sticky-footer-wrapper">
-      <header>
-        <hgroup>
-          <h1>ghostwriter.js</h1>
-          <h2>Let the haunting begin.</h2>
-        </hgroup>
+    <input class="haunt-me" type="text">
 
-        <div class="links">
+    <script>
+      var ghost = ghostwriter.haunt({
+        input: '.haunt-me'
+      , manuscript: [
+          'boo!'
+        , ghostwriter.backspace.repeat(4)
+        , 'sorry if i startled you'
+        , ghostwriter.selectAll
+        , ghostwriter.backspace
+        , 'i am actually quite friendly'
+        ]
+      });
 
-        </div>
-      </header>
-
-      <input class="haunted" type="text">
-
-      <div class="sticky-footer-push"></div>
-    </div>
-
-    <footer>
-      <p>(c) 2013 Jake Harding</p>  
-    </footer>
+      ghost.start();
+    </script>
   </body>
-</html>
+</hmtl>
