Delay haunting until document.ready.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         , ghostwriter.backspace
         , 'enjoy!'
         ]
-      }).start();
+      });
+
+      $(document).ready(function() { haunt.start(); });
 
       $('.haunted')
       .on('rotate', function() { 
