--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>ghostwriter.js</title>
+    <meta name="description" content="Programmatically interact with text inputs.">
     <meta name="viewport" content="width=device-width">
+
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="ghostwriter.github.css">
   </head>
