--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Programmatically interact with text inputs.">
     <meta name="viewport" content="width=device-width">
 
+    <link rel="icon" href="favicon.ico">
+
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="ghostwriter.github.css">
   </head>
