Point links to latest release.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
         <div class="links">
           <a class="btn" href="https://github.com/jharding/ghostwriter/blob/master/README.md">Documentation</a>
-          <a class="btn" href="https://raw.github.com/jharding/ghostwriter/master/ghostwriter.js">ghostwriter.js</a>
-          <a class="btn" href="https://raw.github.com/jharding/ghostwriter/master/ghostwriter.min.js">ghostwriter.min.js</a>
+          <a class="btn" href="http://jharding.github.com/ghostwriter/releases/latest/ghostwriter.js">ghostwriter.js</a>
+          <a class="btn" href="http://jharding.github.com/ghostwriter/releases/latest/ghostwriter.min.js">ghostwriter.min.js</a>
           <a class="btn btn-restart-demo" href="#">Play Demo Again</a>
         </div>
 
